refactor(java): switch jdbc oauth example to cli args